[package]
name = "term-replay"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
nix = { version = "0.29", features = ["process", "term", "fs", "signal", "poll"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
chrono = "0.4"
