[workspace]
members = [
    "crates/term-core",
    "crates/term-session", 
    "crates/term-protocol",
    "crates/term-server",
    "crates/term-client",
    "crates/term-replay",
    "crates/term-tunnel",
    "crates/term-tunnel-server"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
nix = { version = "0.29", features = ["process", "term", "fs", "signal", "poll"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
chrono = "0.4"
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.23"
smux = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
