[package]
name = "term-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
nix = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Local crates
term-core = { path = "../term-core" }
term-session = { path = "../term-session" }