[package]
name = "term-replay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "term-replay"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }

# Local crates
term-server = { path = "../term-server" }
term-client = { path = "../term-client" }
term-protocol = { path = "../term-protocol" }
term-session = { path = "../term-session" }