[package]
name = "term-tunnel-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "term-tunnel-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
futures-util = "0.3"
chrono = { workspace = true }
smux = { workspace = true }
libc = { workspace = true }

# Local crates
term-protocol = { path = "../term-protocol" }
term-session = { path = "../term-session" }

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "term_tunnel_server"
path = "src/lib.rs"