[package]
name = "term-tunnel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "term-tunnel"
path = "src/main.rs"

[lib]
name = "term_tunnel"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
smux = { workspace = true }
serde_json = { workspace = true }

# Local crates
term-core = { path = "../term-core" }
term-session = { path = "../term-session" }
term-protocol = { path = "../term-protocol" }

[dev-dependencies]
tempfile = "3.8"